kubernetes/addons/networking/traefik-internal/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal-dashboard
  namespace: traefik-internal
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-internal-networking
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: traefik
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-internal-networking
