kubernetes/addons/networking/traefik-internal/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://traefik-internal.default.internal.javiersant.com"
    gethomepage.dev/description: Traefik Internal Dashboard
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: traefik.svg
    gethomepage.dev/name: Traefik Internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-internal.default.internal.javiersant.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-javstudio-org-tls
